Fix overflow on hover

--- a/new-work/src/components/StickyHeader.module.scss
+++ b/new-work/src/components/StickyHeader.module.scss
@@ -45,6 +45,7 @@
   border-bottom-left-radius: calc(0.5 * var(--br));
   border-bottom-right-radius: calc(0.5 * var(--br));
   margin-top: -1px;
+      overflow: hidden;
   @include bp(m) {
     border-top: 0;
     margin-top: 0;
